<resources>
    <string name="app_name">Navigation</string>
    <string name="phone_textview">PHONE</string>
    <string name="chat_textview">CHAT</string>
    <string name="explore_textview">EXPLORE</string>
    <string name="wallet_textview">WALLET</string>
    <string name="hello_phone_textview">Hello phone</string>
    <string name="hello_chat_textview">Hello chat</string>
    <string name="hello_explore_textview">Hello explore</string>
    <string name="hello_wallet_textview">Hello wallet</string>
    <string name="starbucks_textview">Starbucks</string>
    <string name="store_textview">Store</string>
    <string name="activity_textview">Activity</string>
    <string name="cowork_textview">CoWork</string>
    <string name="page2_textview">page 2</string>
    <string name="exchange_textview">Ex</string>
    <string name="container_textview">Cn</string>
    <string name="container_money_textview">Money</string>
    <string name="more_information">More Info</string>
    <string name="ad_textview">Advertisement</string>
</resources>