<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_top_layout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/container_background"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/container_imageview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/money_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/container_money_textview"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@+id/container_imageview"
            app:layout_constraintTop_toTopOf="@+id/container_imageview" />

        <TextView
            android:id="@+id/xnc_textview"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="XNC"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/container_imageview"
            app:layout_constraintLeft_toRightOf="@+id/container_imageview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginRight="15dp"
            android:text="9,102,619"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/money_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="123"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/xnc_textview" />

        <ProgressBar
            android:id="@+id/deadline_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="6dp"
            android:layout_marginTop="10dp"
            android:progressDrawable="@drawable/progressbar_container_money_deadline"
            app:layout_constraintLeft_toLeftOf="@id/container_imageview"
            app:layout_constraintTop_toBottomOf="@id/container_imageview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginRight="15dp"
            android:text="328天後到期"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/deadline_progressbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/container_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadline_progressbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/more_information"
            android:textColor="@color/teal_700"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/container_top_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_textview"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>