<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".WalletFragment">

    <ImageView
        android:id="@+id/user_imageview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/starbucks_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/starbucks_textview"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/user_imageview"
        app:layout_constraintTop_toTopOf="@+id/user_imageview" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/store_background"
        android:gravity="center"
        android:text="@string/store_textview"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_imageview"
        app:layout_constraintLeft_toRightOf="@+id/user_imageview" />

    <ImageView
        android:id="@+id/setting_imageview"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/setting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notification_imageview"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/notification"
        app:layout_constraintRight_toLeftOf="@id/setting_imageview"
        app:layout_constraintTop_toTopOf="@id/setting_imageview" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/center_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_imageview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_layout"
            android:layout_width="110dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/activity"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_textview"
                app:layout_constraintTop_toBottomOf="@+id/activity_imageview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cowork_layout"
            android:layout_width="110dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cowork_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/cowork"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cowork_textview"
                app:layout_constraintTop_toBottomOf="@+id/cowork_imageview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/store_layout"
            android:layout_width="110dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/store_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/store"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_textview"
                app:layout_constraintTop_toBottomOf="@+id/store_imageview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        app:tabTextColor="@color/gray"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/center_layout"
        app:layout_constraintLeft_toLeftOf="parent">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>